--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Commit changes
         run: |
           date > generated.txt
-          not.txt > not.txt
+          echo not.txt
           git config user.name mregungor
           git config user.email emre.gungor@ksbu.edu.tr
           git add .
